Added the Taboola ETL command. It have methods for get tokens from Db and save them to Db. Added to Taboola Utility the help method for retrieving a list of infos about all our accounts. Also the utility have the method for initialize request new access token if the current access token expires. Added parameters to config. Also the word "Taboola" added to the user dictionary.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -245,6 +245,10 @@
     <add key="JEM_MaxNumberOfRequestsToRunWithUniqueArguments" value="3" />
     <add key="JEM_MaxNumberOfRunningRequests" value="20" />
 
+    <!--Taboola Configuration-->
+    <add key="TaboolaClientId" value="23b60951e4de48fe85770116f23c65f3" />
+    <add key="TaboolaClientSecret" value="58f216574294475e8a06b1b8ab884e8c" />
+    <add key="TaboolaUnauthorizedAttemptsNumber" value="3"/>
   </appSettings>
   <system.serviceModel>
     <bindings>
