--- a/3/DirectAgents.Web/Taboola/Taboola.csproj
+++ b/3/DirectAgents.Web/Taboola/Taboola.csproj
@@ -55,7 +55,9 @@
     <Compile Include="Utilities\TaboolaUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Entities\QueryParams\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
