Values of "MaxRetryAttempts" and "PauseBetweenAttempts" were moved to config.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -91,6 +91,12 @@
       <setting name="FromRequest" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="MaxRetryAttempts" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="PauseBetweenAttemptsInSeconds" serializeAs="String">
+        <value>1</value>
+      </setting>
     </CakeExtractor.SeleniumApplication.Properties.PdaSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
       <setting name="SignInPageUrl" serializeAs="String">
