Added Yam Daily loader tests.

--- a/3/DirectAgents.Web/CakeExtracter.Tests/CakeExtracter.Tests.csproj
+++ b/3/DirectAgents.Web/CakeExtracter.Tests/CakeExtracter.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="JobTests\Kochava\KochavaLoaderTests.cs" />
     <Compile Include="JobTests\Yam\ExtractorTests\YamDailySummariesExtractorTests.cs" />
     <Compile Include="JobTests\Yam\Helpers\PredefinedTestObjectsStorage.cs" />
+    <Compile Include="JobTests\Yam\LoaderTests\YamDailySummariesLoaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestsSetUp.cs" />
   </ItemGroup>
