--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -209,6 +209,14 @@
     <add key="Adform_OrderInsteadOfCampaign" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsWithSpecificTracking" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsTrackingIds" value="103625" /><!--Bevel Conversions ALL-->
+    <add key="AdformMaxPageSize" value="0"/><!--earlier: 3000-->
+    <add key="AdformMaxNumberOfMetrics" value="10"/>
+    <add key="AdformMaxNumberOfDimensions" value="8"/>
+    <add key="AdformMaxPollingRetryAttempt" value="20"/>
+    <add key="AdformUnauthorizedAttemptsNumber" value="1"/>
+    <add key="AdformMaxAttemptsNumber" value="3"/>
+    <add key="AdformQuotaLimitAttemptsNumber" value="30"/>
+    <add key="AdformPauseBetweenPollingAttemptsSeconds" value="30"/>
 
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
     <!-- the job expects the certificate at this path. -->
