--- a/3/API/Adform/Adform.csproj
+++ b/3/API/Adform/Adform.csproj
@@ -52,17 +52,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ResponseStatus.cs" />
     <Compile Include="Utilities\AdformLogger.cs" />
     <Compile Include="Utilities\AdformUtility.cs" />
     <Compile Include="Entities\ReportEntities\MetricMetadata.cs" />
     <Compile Include="Entities\ReportSettings.cs" />
     <Compile Include="Entities\ReportEntities\Dates.cs" />
-    <Compile Include="Entities\RequestEntities\GetTokenResponse.cs" />
+    <Compile Include="Entities\ResponseEntities\GetTokenResponse.cs" />
     <Compile Include="Entities\ReportEntities\Paging.cs" />
     <Compile Include="Entities\ReportEntities\ReportData.cs" />
     <Compile Include="Entities\ReportEntities\ReportParams.cs" />
     <Compile Include="Entities\ReportEntities\ReportResponse.cs" />
-    <Compile Include="Entities\RequestEntities\PollingOperationResponse.cs" />
+    <Compile Include="Entities\ResponseEntities\PollingOperationResponse.cs" />
     <Compile Include="Enums\AdInteractionType.cs" />
     <Compile Include="Enums\ConversionMetric.cs" />
     <Compile Include="Enums\Dimension.cs" />
