--- a/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
+++ b/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="ManyConsole" version="1.0.0.4" targetFramework="net461" />
+  <package id="Mono.Options" version="5.3.0" targetFramework="net461" />
   <package id="Moq" version="4.10.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit.Console" version="3.9.0" targetFramework="net461" />
@@ -14,4 +17,5 @@
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="Z.EntityFramework.Extensions" version="3.16.23" targetFramework="net461" />
 </packages>
