Added assembly bindings that exist in the production config. Included the Apple certificate for the "CourseHero" account.

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -15,6 +15,11 @@
     <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
     <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="CakeExtracter.Data.CakeTraffic.CakeTrafficContext" connectionString="CakeExtracter.Data.CakeTraffic.CakeTrafficContext_ConnectionString" providerName="System.Data.SqlClient" />
+    <add name="ClientPortal.Data.Contexts.ClientPortalDWContext" connectionString="ClientPortal.Data.Contexts.ClientPortalDWContext_ConnectionString" providerName="System.Data.SqlClient" />
+    <add name="ClientPortal.Data.Entities.TD.TDContext" connectionString="ClientPortal.Data.Entities.TD.TDContext_ConnectionString" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="DefaultConnection_ConnectionString" providerName="System.Data.SqlClient" />
+    <add name="DirectAgents.Domain.Entities.Wiki.WikiContext" connectionString="DirectAgents.Domain.Entities.Wiki.WikiContext_ConnectionString" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework codeConfigurationType="DirectAgents.Domain.Contexts.Configurations.AzureConfiguration, DirectAgents.Domain">
     <contexts>
@@ -214,10 +219,12 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <add name="MVCGridHandler" verb="*" path="MVCGridHandler.axd" type="MVCGrid.Web.MVCGridHandler, MVCGrid" /></handlers>
+      <add name="MVCGridHandler" verb="*" path="MVCGridHandler.axd" type="MVCGrid.Web.MVCGridHandler, MVCGrid" />
+    </handlers>
     <modules>
       <!-- add this on Azure... (Release config) -->
       <!--<add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />-->
+      <add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />
     </modules>
   </system.webServer>
   <runtime>
