From configs were removed VALUES of EntityFramework LicenseKey, access token, refresh token, client ID, client secret, authorization code, password. Values of email were saved.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -45,7 +45,7 @@
   <appSettings>
     <!-- Entity Framework Extensions License Settings-->
     <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents" />
-    <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380" />
+    <add key="Z_EntityFramework_Extensions_LicenseKey" value="" />
 
     <!--Syncher sql scripts configuration -->
     <add key="VcdSyncScriptPath" value="./SQL/VCD/SyncVcdAnalyticTable.sql" />
@@ -112,10 +112,10 @@
         <value>1</value>
       </setting>
       <setting name="EMail" serializeAs="String">
-        <value>email</value>
+        <value></value>
       </setting>
       <setting name="EMailPassword" serializeAs="String">
-        <value>password</value>
+        <value></value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.Settings>
   </userSettings>
