--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -62,6 +62,7 @@
     <add key="AmazonUnauthorizedAttemptsNumber" value="3" />
     <add key="AmazonReportGenerationAttemptsNumber" value="5" />
     <add key="AmazonFailedRequestAttemptsNumber" value="10" />
+    <add key="AmazonIntervalBetweenRequestsInMinutes" value="40" />
     <add key="AmazonAuthCode" value="ANnhMugiYCuDlSyoEKdJ" />
     <!--<add key="AmazonAuthCode" value="ANyvcToCyYtvRsPgWwaR" />--><!-- granted access to ronnie's account -->
     <add key="AmazonRefreshToken" value="" />
