--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/PdaSettings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/PdaSettings.settings
@@ -38,5 +38,11 @@
     <Setting Name="FromRequest" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="MaxRetryAttempts" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="PauseBetweenAttemptsInSeconds" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
