Added special interval between requests to Bing command.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -104,6 +104,7 @@
     <add key="BingReportFolder" value="C:\Reports\Bing" />
     <!--<add key="BingReportFolder" value="d:\local"/>--><!-- azure -->
     <add key="BingReportFilename" value="bingrep.zip" />
+    <add key="BingIntervalBetweenRequestsInMinutes" value="60" />
 
     <add key="CriteoUsername_Folica" value="criteo_folica_api" />
     <add key="CriteoAppToken_Folica" value="" />
