--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -247,6 +247,9 @@
     <add key="JEM_MaxNumberOfRequestsToRunWithUniqueArguments" value="3" />
     <add key="JEM_MaxNumberOfRunningRequests" value="20" />
 
+    <!--Automated shut down mechanism configuration -->
+    <add key="CommandMaxExecutionTimeInHours_Default" value="3" />
+    
   </appSettings>
   <system.serviceModel>
     <bindings>
