Added auto shutdown mechanism for commands. (#135)

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -248,6 +248,9 @@
     <add key="JEM_MaxNumberOfRequestsToRunWithUniqueArguments" value="7" />
     <add key="JEM_MaxNumberOfRunningRequests" value="20" />
 
+    <!--Automated shut down mechanism configuration -->
+    <add key="CommandMaxExecutionTimeInHours_Default" value="10" />
+    
   </appSettings>
   <system.serviceModel>
     <bindings>
