Added the configuration manager for PDA settings. Refactoring of work with config settings.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -248,6 +248,18 @@
     <add key="JEM_MaxNumberOfRequestsToRunWithUniqueArguments" value="7" />
     <add key="JEM_MaxNumberOfRunningRequests" value="20" />
 
+    <!--Selenium Configuration-->
+    <add key="PDA_SignInPageUrl" value="https://advertising.amazon.com/sign-in"/>
+    <add key="PDA_CampaignsPageUrl" value="https://advertising.amazon.com/cm/campaigns"/>
+    <add key="PDA_EMail" value="reportingdev@directagents.com"/>
+    <add key="PDA_EMailPassword" value="rep0rts"/>
+    <add key="PDA_FilesNameTemplate" value="*.csv"/>
+    <add key="PDA_DownloadsDirectoryName" value="WebDriverDownloads"/>
+    <add key="PDA_CookiesDirectoryName" value="Cookies"/>
+    <add key="PDA_WaitPageTimeoutInMinutes" value="30"/>
+    <add key="PDA_MaxRetryAttempts" value="10"/>
+    <add key="PDA_PauseBetweenAttemptsInSeconds" value="2"/>
+
   </appSettings>
   <system.serviceModel>
     <bindings>
