Added waiting (configurable the number of seconds) before requesting a campaign information.

--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -475,6 +475,7 @@
     <Compile Include="Etl\AmazonSelenium\Helpers\TimeHelper.cs" />
     <Compile Include="Etl\AmazonSelenium\PageActions\BaseAmazonPageActions.cs" />
     <Compile Include="Etl\AmazonSelenium\PageActions\BasePageActions.cs" />
+    <Compile Include="Etl\AmazonSelenium\PDA\Configuration\PdaConfigurationManager.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Enums\AmazonCmApiMetrics.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Enums\AmazonReportMetrics.cs" />
     <Compile Include="Etl\AmazonSelenium\PDA\Exceptions\AccountDoesNotHaveProfileException.cs" />
