--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -46,7 +46,7 @@
   <appSettings>
     <!-- Entity Framework Extensions License Settings-->
     <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents" />
-    <add key="Z_EntityFramework_Extensions_LicenseKey" value="" />
+    <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380" />
 
     <!--<add key="PortalEmail" value="portal@directagent.com"/>-->
 
@@ -134,8 +134,8 @@
     <!-- Funimation, Bevel, Course Hero, Britbox, American Beauty Star -->
     <add key="DBM_StrategiesFromLineItems" value="124700741,503077595,516881254,518396307,520462220" />
     <!-- report ids(saved as external id of the accounts) -->
-    <add key="DBM_CreativeReportIds" value="604983784"/>
-    <add key="DBM_LineItemReportIds" value="604983549"/>
+    <add key="DBM_CreativeReportIds" value="604983784" />
+    <add key="DBM_LineItemReportIds" value="604983549" />
 
     <add key="FacebookToken" value="" />
     <add key="FacebookApiVersion" value="3.2" />
@@ -164,25 +164,25 @@
     <add key="YAM_NumTries_ReportParsing" value="3" />
     <add key="YAM_WaitTime_Seconds" value="180" />
     <add key="YAMids_UsePixelParm" value="19685,27476,21328" /><!-- CovHouse,LornaJane,G&T -->
-    <add key="YAM_Map_Day" value=""/>
-    <add key="YAM_Map_Impressions" value=""/>
-    <add key="YAM_Map_Clicks" value=""/>
-    <add key="YAM_Map_ClickThroughConversion" value=""/>
-    <add key="YAM_Map_ViewThroughConversion" value=""/>
-    <add key="YAM_Map_ConversionValue" value=""/>
-    <add key="YAM_Map_AdvertiserSpending" value=""/>
-    <add key="YAM_Map_CampaignName" value=""/>
-    <add key="YAM_Map_CampaignId" value=""/>
-    <add key="YAM_Map_LineName" value=""/>
-    <add key="YAM_Map_LineId" value=""/>
-    <add key="YAM_Map_CreativeName" value=""/> <!--Creative - for old stats-->
-    <add key="YAM_Map_CreativeId" value=""/>
-    <add key="YAM_Map_AdName" value=""/>
-    <add key="YAM_Map_AdId" value=""/>
-    <add key="YAM_Map_PixelName" value=""/>
-    <add key="YAM_Map_PixelId" value=""/>
-    <add key="YAM_Map_PixelParameter" value=""/>
-    <add key="YamIntervalBetweenRequestsInMinutes" value="20"/>
+    <add key="YAM_Map_Day" value="" />
+    <add key="YAM_Map_Impressions" value="" />
+    <add key="YAM_Map_Clicks" value="" />
+    <add key="YAM_Map_ClickThroughConversion" value="" />
+    <add key="YAM_Map_ViewThroughConversion" value="" />
+    <add key="YAM_Map_ConversionValue" value="" />
+    <add key="YAM_Map_AdvertiserSpending" value="" />
+    <add key="YAM_Map_CampaignName" value="" />
+    <add key="YAM_Map_CampaignId" value="" />
+    <add key="YAM_Map_LineName" value="" />
+    <add key="YAM_Map_LineId" value="" />
+    <add key="YAM_Map_CreativeName" value="" /> <!--Creative - for old stats-->
+    <add key="YAM_Map_CreativeId" value="" />
+    <add key="YAM_Map_AdName" value="" />
+    <add key="YAM_Map_AdId" value="" />
+    <add key="YAM_Map_PixelName" value="" />
+    <add key="YAM_Map_PixelId" value="" />
+    <add key="YAM_Map_PixelParameter" value="" />
+    <add key="YamIntervalBetweenRequestsInMinutes" value="20" />
 
     <!--Outdated-->
     <add key="YAMMap_PostClickConv" value="Click Through Conversion" />
@@ -207,11 +207,11 @@
     <add key="Adform_OrderInsteadOfCampaign" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsWithSpecificTracking" value="43981" /><!--Bevel (Walker & Company)-->
     <add key="Adform_AccountsTrackingIds" value="103625" /><!--Bevel Conversions ALL-->
-    <add key="AdformMaxPollingRetryAttempt" value="20"/>
-    <add key="AdformUnauthorizedAttemptsNumber" value="1"/>
-    <add key="AdformMaxAttemptsNumber" value="3"/>
-    <add key="AdformQuotaLimitAttemptsNumber" value="30"/>
-    <add key="AdformPauseBetweenPollingAttemptsSeconds" value="30"/>
+    <add key="AdformMaxPollingRetryAttempt" value="20" />
+    <add key="AdformUnauthorizedAttemptsNumber" value="1" />
+    <add key="AdformMaxAttemptsNumber" value="3" />
+    <add key="AdformQuotaLimitAttemptsNumber" value="30" />
+    <add key="AdformPauseBetweenPollingAttemptsSeconds" value="30" />
 
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v2/" />
     <!-- the job expects the certificate at this path. -->
@@ -250,7 +250,13 @@
 
     <!--Automated shut down mechanism configuration -->
     <add key="CommandMaxExecutionTimeInHours_Default" value="10" />
-    
+
+    <!--Failed Jobs Notifications Configuration -->
+    <add key="AzureSendGridApiKey" value="" />
+    <add key="JEM_Failure_ToEmails" value="" />  
+    <add key="JEM_Failure_CcEmails" value="" />
+    <add key="JEM_Failure_FromEmail" value="" />
+
   </appSettings>
   <system.serviceModel>
     <bindings>
