--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -97,6 +97,10 @@
     <Compile Include="MigrationsTD\201905311144009_Mig_ErrorEmailSentProperty.Designer.cs">
       <DependentUpon>201905311144009_Mig_ErrorEmailSentProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201906051446061_Mig_JobFailedEmailSentProperty.cs" />
+    <Compile Include="MigrationsTD\201906051446061_Mig_JobFailedEmailSentProperty.Designer.cs">
+      <DependentUpon>201906051446061_Mig_JobFailedEmailSentProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="SpecialPlatformsDataProviders\Facebook\IFacebookWebPortalDataService.cs" />
     <Compile Include="Abstract\IMainRepository.cs" />
     <Compile Include="Abstract\IPlatformAccountRepository.cs" />
@@ -1107,6 +1111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201905311144009_Mig_ErrorEmailSentProperty.resx">
       <DependentUpon>201905311144009_Mig_ErrorEmailSentProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201906051446061_Mig_JobFailedEmailSentProperty.resx">
+      <DependentUpon>201906051446061_Mig_JobFailedEmailSentProperty.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
